...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".InitialUserCustomisation">

                    <CheckBox
                        android:id="@+id/ingredientCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Search by ingredients"
                        android:textColor="#000000"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredientCheckBox" />

                    <CheckBox
                        android:id="@+id/chefCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Search by chef"
                        android:textColor="#000000"
...
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".InitialUserCustomisation">

                    <CheckBox
                        android:id="@+id/menuPescatarianCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Pescatarian"
                        android:textColor="#000000"
...
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <CheckBox
                        android:id="@+id/menuVegCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Vegetarian"
                        android:textColor="#000000"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menuVeganCheckBox" />

                    <CheckBox
                        android:id="@+id/menuNutCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Allergic to nuts"
                        android:buttonTint="@color/colorAccent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/allergyTitle" />

                    <CheckBox
                        android:id="@+id/menuWheatCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Allergic to wheat"
                        android:buttonTint="@color/colorAccent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menuNutCheckBox" />

                    <CheckBox
                        android:id="@+id/menuSoyCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Allergic to soy"
                        android:buttonTint="@color/colorAccent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menuWheatCheckBox" />

                    <CheckBox
                        android:id="@+id/menuMilkCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Allergic to milk"
                        android:buttonTint="@color/colorAccent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menuSoyCheckBox" />

                    <CheckBox
                        android:id="@+id/menuEggCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Allergic to eggs"
                        android:buttonTint="@color/colorAccent"
...
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <CheckBox
                        android:id="@+id/voteCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="20sp"
                        android:text="Sort by votes"
                        android:buttonTint="@color/colorAccent"
...
