...
    <string name="rcEggs">Contains eggs</string>
    <string name="rcLactose">Contains lactose</string>
    <string name="rcNuts">Contains nuts</string>
    <string name="rcShellfish">Contains shellfish</string>
    <string name="rcSoya">Contains soya</string>
    <string name="rcGluten">Contains gluten</string>
    <string name="rcDiet">Diet</string>
    <string-array name="rcDiets">
        <item>Normal</item>
        <item>Pescetarian</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
...
